--- a/css/styles.css
+++ b/css/styles.css
@@ -59,10 +59,19 @@ img {
 }
 
 .container {
-	width: 1158px;
+	min-width: 320px;
+	max-width: 428px;
 	padding: 0 15px;
 	margin-left: auto;
 	margin-right: auto;
+	background-color: #31d0aa;
+}
+
+@media screen and (min-width:1200px) {
+	.container {
+		min-width: 1158px;
+	}
+
 }
 
 /* top-line */
@@ -104,7 +113,14 @@ img {
 /* navigation */
 
 .navigation-list {
-	display: flex;
+	display: none;
+}
+
+@media screen and (min-width:1200px) {
+	.navigation-list {
+		display: flex;
+	}
+
 }
 
 .nav-link {
@@ -166,8 +182,16 @@ img {
 /* adress */
 
 .adress-list {
-	display: flex;
-	margin-left: auto;
+	display: none;
+
+}
+
+@media screen and (min-width:1200px) {
+	.adress-list {
+		display: flex;
+		margin-left: auto;
+
+	}
 }
 
 .adress-link {
@@ -203,7 +227,7 @@ img {
 }
 
 .overlay {
-	width: 1440px;
+	width: 100%;
 	height: 600px;
 	margin-left: auto;
 	margin-right: auto;
@@ -218,9 +242,16 @@ img {
 	color: var(--blank);
 	font-family: "Roboto", sans-serif;
 	font-weight: 700;
-	font-size: 56px;
-	line-height: 1.1;
+	font-size: 36px;
+	line-height: 0.95;
 	margin-bottom: 48px;
+}
+
+@media screen and (min-width:1200px) {
+	.studio-hero-header {
+		font-size: 56px;
+		line-height: 1.1;
+	}
 }
 
 .button-order-service {
@@ -504,17 +535,31 @@ img {
 
 
 .section-features .container {
-	display: flex;
-	padding: 120px 0;
+	padding: 96px 0;
+}
+
+@media screen and (min-width:1200px) {
+	.section-features .container {
+		display: flex;
+		justify-content: space-between;
+		padding: 120px 0;
+	}
 }
 
 .feature-img {
-	width: 264px;
-	height: 112px;
-	background-color: var(--cloud);
-	padding: 24px 100px;
-	border-radius: 4px;
-	margin-bottom: 8px;
+	display: none;
+}
+
+@media screen and (min-width:1200px) {
+	.feature-img {
+		display: block;
+		width: 264px;
+		height: 112px;
+		background-color: var(--cloud);
+		padding: 24px 100px;
+		border-radius: 4px;
+		margin-bottom: 8px;
+	}
 }
 
 .icon-feature {
@@ -532,10 +577,54 @@ img {
 
 .feature-list {
 	display: flex;
+	flex-direction: column;
+	text-align: center;
+	padding: 0 15px;
 }
 
-.feature-list-item:not(:last-child) {
+@media screen and (min-width:1200px) {
+	.feature-list {
+		display: flex;
+		flex-direction: row;
+
+	}
+}
+
+.feature-list-item {
+	margin-bottom: 72px;
+}
+
+.feature-list-item:last-child {
+	margin-bottom: 0px;
+}
+
+@media screen and (min-width:1200px) {
+	.feature-list-item {
+		margin: 0px;
+	}
+}
+
+/* .feature-list-item:not(:last-child) {
 	margin-right: 24px;
+} */
+.list-header {
+	color: var(--navy-blue);
+	font-weight: 600;
+	font-size: 36px;
+	line-height: calc(40/36);
+	margin-bottom: 8px;
+	letter-spacing: 0.02em;
+}
+
+@media and(min-width:1200px) {
+	.list-header {
+		color: var(--navy-blue);
+		font-weight: 600;
+		font-size: 36px;
+		line-height: calc(40/36);
+		margin-bottom: 8px;
+		letter-spacing: 0.02em;
+	}
 }
 
 .list-text {
@@ -546,6 +635,17 @@ img {
 
 
 /* what are we doing */
+.section-what {
+	display: none;
+}
+
+@media screen and (min-width:1200px) {
+	.section-what {
+		display: block;
+		padding-bottom: 120px;
+
+	}
+}
 
 
 .what-text {
@@ -559,30 +659,17 @@ img {
 
 .what-list {
 	display: flex;
+
 }
 
 .what-list-item:not(:last-child) {
 	margin-right: 24px;
 }
 
-.list-header {
-	color: var(--navy-blue);
-	font-weight: 600;
-	font-size: 20px;
-	line-height: 1.2;
-	margin-bottom: 8px;
-	letter-spacing: 0.02em;
-}
 
-.list-text {
-	color: var(--navy-blue);
-	font-size: 16px;
-	line-height: 1.5;
-}
 
-.section-what {
-	padding-bottom: 120px;
-}
+
+
 
 
 /* our team */
