--- a/css/styles.css
+++ b/css/styles.css
@@ -675,7 +675,6 @@ img {
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
-		justify-content: space-between;
 		text-align: start;
 	}
 }
@@ -685,6 +684,7 @@ img {
 		display: flex;
 		flex-direction: row;
 		text-align: start;
+
 	}
 }
 
@@ -704,6 +704,10 @@ img {
 
 	.feature-list-item:nth-child(-n+2) {
 		margin-bottom: 72px;
+	}
+
+	.feature-list-item:nth-child(odd) {
+		margin-right: 24px;
 	}
 }
 
@@ -734,24 +738,16 @@ img {
 
 @media screen and (min-width:1200px) {
 	.feature-list-header {
-		font-size: 16px;
+		font-size: 20px;
 		line-height: calc(24/16);
 	}
 }
 
-.list-text {
+.feature-list-text {
 	color: var(--navy-blue);
 	font-size: 16px;
-	line-height: calc(16/24);
+	line-height: calc(24/16);
 	letter-spacing: 0.02em;
-}
-
-@media screen and (min-width:1200px) {
-	.list-text {
-		font-size: 16px;
-		line-height: calc(16/24);
-		letter-spacing: 0.02em;
-	}
 }
 
 
