--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,8 @@ button {
 
 img {
 	display: block;
+	max-width: 100%;
+	height: auto;
 }
 
 .container {
@@ -217,9 +219,7 @@ img {
 
 }
 
-@media screen and (min-width:1200px) {
-	adr
-}
+
 
 
 .adress-link {
@@ -341,7 +341,7 @@ img {
 	pointer-events: auto;
 }
 
-.mobile-menu-container {
+.menu-container {
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -350,6 +350,7 @@ img {
 	padding-top: 80px;
 	padding-bottom: 40px;
 	height: 100%;
+
 }
 
 .close-button-burger {
@@ -417,6 +418,11 @@ img {
 	margin-bottom: 48px;
 }
 
+.mob-sm-link-icon {
+	width: 24px;
+	height: 24px;
+}
+
 /* hero */
 
 .studio-hero .container {
@@ -426,22 +432,97 @@ img {
 .studio-hero {
 	background-color: var(--slate);
 	text-align: center;
-	padding-top: 192px;
-	padding-bottom: 192px;
+	padding-top: 112px;
+	padding-bottom: 112px;
+}
+
+@media screen and (min-width:1200px) {
+	.studio-hero {
+		padding-top: 188px;
+		padding-bottom: 188px;
+	}
 }
 
 .overlay {
 	min-width: 320px;
-	width: 100%;
-	height: 600px;
+	max-width: 100%;
 	margin-left: auto;
 	margin-right: auto;
-	background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-		url(../img/people-office.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	/* mob */
+	background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+		url(../img/pic/hero/mob_hero@1x.jpg);
 }
+
+/* 320-480 2x */
+@media screen and (min-device-pixel-ratio: 2),
+screen and (min-resolution: 192dpi),
+screen and (min-resolution: 2dppx) {
+	.overlay {
+		background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+			url(../img/pic/hero/mob_hero@2x.jpg);
+	}
+}
+
+/* 480+ */
+@media screen and (min-width:481px) {
+	.overlay {
+		background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+			url(../img/pic/hero/tab_hero@1x.jpg);
+	}
+}
+
+/* 480+ 2x */
+@media screen and (min-width: 481px) and (min-device-pixel-ratio: 2),
+screen and (min-width: 481px) and (min-resolution: 192dpi),
+screen and (min-width: 481px) and (min-resolution: 2dppx) {
+	.overlay {
+		background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+			url(../img/pic/hero/tab_hero@2x.jpg);
+	}
+}
+
+/* 768+ */
+@media screen and (min-width:769px) {
+	.overlay {
+		background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+			url(../img/pic/hero/desk_hero@x1.jpg);
+	}
+}
+
+/* 768+ x2 */
+@media screen and (min-width:769px) and (min-device-pixel-ratio: 2),
+screen and (min-width:769px) and (min-resolution: 192dpi),
+screen and (min-width:769px) and (min-resolution: 2dppx) {
+	.overlay {
+		background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+			url(../img/pic/hero/desk_hero@2x.jpg);
+	}
+}
+
+/* 1200+ */
+@media screen and (min-width:1200px) {
+	.overlay {
+		background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+			url(../img/pic/hero/desk_hero@x1.jpg);
+	}
+}
+
+/* 1200+ x2 */
+@media screen and (min-width:1200px) and (min-device-pixel-ratio: 2),
+screen and (min-width:1200px) and (min-resolution: 192dpi),
+screen and (min-width:1200px) and (min-resolution: 2dppx) {
+	.overlay {
+		background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+			url(../img/pic/hero/desk_hero@2x.jpg);
+	}
+}
+
+
+
+
 
 .studio-hero-header {
 	color: var(--blank);
@@ -526,14 +607,23 @@ img {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 408px;
-	height: 576px;
+
+
+
 	background-color: var(--blank);
 	border-radius: 4px;
 	border: none;
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	overflow: auto;
+	max-height: 80vh;
+	width: 90%;
+}
 
+@media screen and (min-width:480px) {
+	.modal {
+		width: 408px;
+	}
 }
 
 
@@ -687,51 +777,60 @@ img {
 	outline: none;
 }
 
-.form_field_check {
-	position: relative;
-	width: 100%;
-	margin-top: 6px;
+/* checkbox */
+.check-box-label {
+	display: flex;
 }
 
-.policy_label {
-	display: inline-block;
-	position: relative;
-	width: 100%;
-	font-size: 12px;
-	line-height: 1.17;
-	letter-spacing: 0.04em;
-	margin-left: ;
-}
-
-.check__input {
-	position: absolute;
-	appearance: none;
+.checkbox {
 	-webkit-appearance: none;
 	-moz-appearance: none;
+	appearance: none;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
-.check__box {
-	position: absolute;
+.icon-checkbox {
+	display: inline-block;
 	width: 16px;
 	height: 16px;
-	top: 50%;
-	left: 0;
-	transform: translateY(-50%);
+	margin-top: 16px;
 	background-image: url(../img/uncheck.svg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-origin: border-box;
 }
 
-
-
-.check__input:checked+.check__box {
+.checkbox:checked+.icon-checkbox {
+	background-color: #404BBF;
 	background-image: url(../img/check.svg);
-	background-color: var(--iris);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-origin: border-box;
-	border-radius: 2px;
+	border-color: #404BBF;
+}
+
+.text-checkbox {
+	font-family: var(--primary-font);
+	color: #757575;
+	margin-top: 16px;
+	font-size: 12px;
+	line-height: calc(16 / 12);
+	letter-spacing: 0.04em;
+	margin-left: 8px;
+}
+
+.link-chechbox {
+	font-family: var(--primary-font);
+	font-size: 12px;
+	line-height: calc(16 / 12);
+	letter-spacing: 0.04em;
+}
+
+.link-chechbox:hover,
+.link-chechbox:focus {
+	color: var(--iris);
 }
 
 .send__btn {
@@ -1058,7 +1157,6 @@ img {
 .team-link-icon {
 	height: 16px;
 	width: 16px;
-
 }
 
 /* Customers */
